--- a/index.html
+++ b/index.html
@@ -1065,20 +1065,20 @@
                 mb-3
               "
             >
-              CATEGORIES
+              Know us
             </h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-400 hover:text-white">First Link</a>
+                <a class="text-gray-400 hover:text-white">About us</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Second Link</a>
+                <a class="text-gray-400 hover:text-white">Careers</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Third Link</a>
+                <a class="text-gray-400 hover:text-white">Blogs</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Fourth Link</a>
+                <a class="text-gray-400 hover:text-white">Shopixia Forums</a>
               </li>
             </nav>
           </div>
@@ -1093,20 +1093,20 @@
                 mb-3
               "
             >
-              CATEGORIES
+              Connect with us
             </h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-400 hover:text-white">First Link</a>
+                <a class="text-gray-400 hover:text-white">Facebook</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Second Link</a>
+                <a class="text-gray-400 hover:text-white">GitHub</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Third Link</a>
+                <a class="text-gray-400 hover:text-white">Instagram</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Fourth Link</a>
+                <a class="text-gray-400 hover:text-white">Twitter</a>
               </li>
             </nav>
           </div>
@@ -1121,20 +1121,33 @@
                 mb-3
               "
             >
-              CATEGORIES
+              Make Money with us
             </h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-400 hover:text-white">First Link</a>
+                <a class="text-gray-400 hover:text-white"
+                  >Sell something on Shopixia</a
+                >
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Second Link</a>
+                <a class="text-gray-400 hover:text-white"
+                  >Protect and Build your brand</a
+                >
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Third Link</a>
+                <a class="text-gray-400 hover:text-white"
+                  >Become an Affiliate</a
+                >
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Fourth Link</a>
+                <a class="text-gray-400 hover:text-white"
+                  >Sell your products Globally</a
+                >
+              </li>
+              <li>
+                <a class="text-gray-400 hover:text-white"
+                  >Advartise your products</a
+                >
               </li>
             </nav>
           </div>
@@ -1149,7 +1162,7 @@
                 mb-3
               "
             >
-              SUBSCRIBE
+              E-Mail
             </h2>
             <div
               class="
@@ -1167,7 +1180,7 @@
                 <label
                   for="footer-field"
                   class="leading-7 text-sm text-gray-400"
-                  >Placeholder</label
+                  >Send us</label
                 >
                 <input
                   type="text"
@@ -1212,12 +1225,13 @@
                   rounded
                 "
               >
-                Button
+                Send
               </button>
             </div>
             <p class="text-gray-500 text-sm mt-2 md:text-left text-center">
-              Bitters chicharrones fanny pack
-              <br class="lg:block hidden" />waistcoat green juice
+              Send us an eMail for any reason you like (e.g., Performance,
+              Quality, Price)
+              <br class="lg:block hidden" />
             </p>
           </div>
         </div>
