--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@
           <p class="text-sm text-gray-400 sm:ml-6 sm:mt-0 mt-4">
             © 2023 Shopixia —
             <a
-              href="https://twitter.com/knyttneve"
+              href="https://twitter.com/devsujay19"
               class="text-gray-500 ml-1"
               target="_blank"
               rel="noopener noreferrer"
